--- a/vehicleRentalSystem/src/main/resources/application.properties
+++ b/vehicleRentalSystem/src/main/resources/application.properties
@@ -8,3 +8,7 @@ server.port=8080
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
+
+# File upload settings
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
