--- a/vehicle_rental_frontend/package.json
+++ b/vehicle_rental_frontend/package.json
@@ -12,6 +12,7 @@
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
